Try to fix other contents showing up when scrowling down on mobile

--- a/index.css
+++ b/index.css
@@ -180,7 +180,7 @@ h1 {
 .content {
 	position: fixed;
 	width: 80%;
-	top: 100%;
+	top: 110%;
 	left: 50%;
 	padding-bottom: 64px;
 	transition: top 1s;
